--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["assests", "Phipino", "themify"]
+  "cSpell.words": ["assests", "Phipino", "themify"],
+  "liveServer.settings.port": 5501
 }
